Remove hard rewrite and rollback to soft rewrite: UI update and small bugfixes

--- a/app/app-main/html/en/settings.html
+++ b/app/app-main/html/en/settings.html
@@ -23,11 +23,8 @@
             <div class="flex">
                 <div class="side-menu" id="menu">
                     <div class="menu-title">
-                        <img alt="The logo of the Zyneon NEXUS App" src="../assets/application/images/icons/app.png">
-                        <p>
-                            Zyneon Studios<br>
-                            <span class="bold">NEXUS Application</span>
-                        </p>
+                        <img alt="The logo of the Zyneon NEXUS App" src="../assets/application/images/logos/app/light.png">
+
                     </div>
                     <ul>
                         <li onclick="toggleMainMenu();">
@@ -251,7 +248,7 @@
                             <div id="settings-about">
                                 <div class="group">
                                     <h4>NEXUS App by Zyneon Studios</h4>
-                                    <h3>Version <span class="text" id="settings-global-application-version">${application.version}</span></h3>
+                                    <h3>Version <span class="text" id="settings-global-application-version">${application.version}${nexus.version}</span></h3>
                                     <h3>Author(s) <span class="text">Zyneon Nexus</span></h3>
                                     <h3>Publisher <span class="text">Zyneon Studios</span></h3>
                                     <h3>License <span class="buttons"><span>GPL-3.0</span><a onclick="openUrl('https://github.com/danieldieeins/Zyneon-Application/blob/master/LICENSE.md');">View</a></span></h3>
