Add DiscoverAPI elements and events

--- a/app/app-main/src/main/html/de/settings.html
+++ b/app/app-main/src/main/html/de/settings.html
@@ -120,7 +120,7 @@
                                     <i class='bx bx-revision'></i>
                                     <p>App neu starten</p>
                                 </li>
-                                <li onclick="connector('sync.exit')" class="danger">
+                                <li onclick="connector('async.sync.exit')" class="danger">
                                     <i class='bx bx-exit'></i>
                                     <p>App beenden</p>
                                 </li>
