--- a/app/app-main/src/main/html/de/discover.html
+++ b/app/app-main/src/main/html/de/discover.html
@@ -15,7 +15,7 @@
         <script src="../assets/cronos/javascript/app-menu.js"></script>
         <script src="../assets/application/javascript/app-shared.js"></script>
         <script src="../assets/application/javascript/app-discover.js"></script>
-        <script>searchTerm = "Klicke zum Suchen"; init();</script>
+        <script>searchTerm = "Klicke zum Suchen"; init(); connector("event.discover.pre");</script>
     </head>
     <body>
         <div class="flex full">
@@ -72,9 +72,7 @@
                 <div class="card search flex" id="search-card">
                     <div class="search-buttons flex">
                         <div class="buttons" id="discover-buttons">
-                            <h4 id="home-button" class="discover-button" onclick="showTab('home')">Start</h4>
-                            <h4 id="news-button" class="discover-button" onclick="showTab('news')">Neuigkeiten</h4>
-                            <h4 id="games-button" class="discover-button" onclick="showTab('games')">Spiele</h4>
+
                         </div>
                         <div class="buttons" id="search-buttons">
                             <h4 class="danger" id="close-search-button" onclick="closeSearch();">X</h4>
@@ -93,58 +91,7 @@
                     </div>
                 </div>
                 <div id="discover-start">
-                    <div id="discover-home" class="discover-tab">
-                        <div class="discover-background"></div>
-                        <div class="discover-tab-content">
-                            <div class="flex home-quick warning" style="display: none !important;">
-                                <div class="card warning">
-                                    <h4>Hej! Dies ist die Prerelease Version der NEXUS App. Falls du Fehler findest, kannst du diese auf unserem Discord melden!</h4>
-                                </div>
-                            </div>
-                            <div class="flex home-quick">
-                                <div class="app-logo">
-                                    <img alt="The Zyneon Studios NEXUS App logo" src="../assets/application/images/logos/app/light.png">
-                                </div>
-                                <div class="card quick-links">
-                                    <h4>Verlinkungen</h4>
-                                    <div class="line"></div>
-                                    <div class="links">
-                                        <h3 class="website" onclick="openUrl('https://nexus.zyneonstudios.com');"><i class='bx bx-globe'></i>Webseite</h3>
-                                        <h3 class="discord" onclick="openUrl('https://discord.com/invite/Q2AEWfesZW');"><i class='bx bxl-discord-alt'></i> Discord</h3>
-                                        <div class="line"></div><br>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex home-quick">
-                                <div class="card quick-access">
-                                    <h4>Schnellaktionen</h4>
-                                    <div class="line"></div>
-                                    <div class="links">
-                                        <h3 class="reload" onclick="location.reload();"><i class='bx bx-refresh'></i>App neu laden</h3>
-                                        <h3 class="restart" onclick="connector('sync.restart');"><i class='bx bx-revision'></i>App neu starten</h3>
-                                        <div class="line"></div><br>
-                                    </div>
-                                </div>
-                                <div class="nexus-logo">
-                                    <img alt="The Zyneon NEXUS logo" src="../assets/application/images/logos/nexus.png">
-                                </div>
-                            </div>
-                            <br><br><br>
-                        </div>
-                    </div>
-                    <div id="discover-news" class="discover-tab">
-                        <div class="discover-background"></div>
-                        <div class="discover-tab-content">
-                            <iframe id="news-frame"></iframe>
-                        </div>
-                    </div>
-                    <div id="discover-games" class="discover-tab">
-                        <div class="discover-background"></div>
-                        <div class="discover-tab-content">
-                            <br><br><br>
-                            Spiele
-                        </div>
-                    </div>
+
                 </div>
                 <div id="discover-search">
                     <div class="flex search-flex">
