--- a/app/app-main/src/main/html/en/discover.html
+++ b/app/app-main/src/main/html/en/discover.html
@@ -73,9 +73,9 @@
                 <div class="card search flex" id="search-card">
                     <div class="search-buttons flex">
                         <div class="buttons" id="discover-buttons">
-                            <h4 id="home-button" class="discover-button" onclick="showTab('home')">Home</h4>
-                            <h4 id="news-button" class="discover-button" onclick="showTab('news')">News</h4>
-                            <h4 id="games-button" class="discover-button" onclick="showTab('games')">Games</h4>
+                            <h3 id="home-button" class="discover-button" onclick="showTab('home')">Home</h3>
+                            <h3 id="news-button" class="discover-button" onclick="showTab('news')">News</h3>
+                            <h3 id="games-button" class="discover-button" onclick="showTab('games')">Games</h3>
                         </div>
                         <div class="buttons" id="search-buttons">
                             <h4 class="danger" id="close-search-button" onclick="closeSearch();">X</h4>
@@ -99,25 +99,26 @@
                         <div class="discover-tab-content">
                             <div class="flex home-quick warning" style="display: none !important;">
                                 <div class="card warning">
-                                    <h4>Hey! This is the prerelease version of the NEXUS app. If you find any errors, you can report them on our Discord!</h4>
+                                    <h4>Warning...</h4>
                                 </div>
                             </div>
                             <div class="flex home-quick">
                                 <div class="app-logo">
                                     <img alt="The Zyneon Studios NEXUS App logo" src="../assets/application/images/logos/app/light.png">
                                 </div>
-                                <div class="card quick-links">
+                                <div class="card text-card">
                                     <h4>Quick links</h4>
                                     <div class="line"></div>
-                                    <div class="links">
-                                        <h3 class="website" onclick="openUrl('https://nexus.zyneonstudios.com');"><i class='bx bx-globe'></i>Website</h3>
-                                        <h3 class="discord" onclick="openUrl('https://discord.com/invite/Q2AEWfesZW');"><i class='bx bxl-discord-alt'></i> Discord</h3>
-                                        <div class="line"></div><br>
+                                    <div class="flex">
+                                        <p>Das ist Text ja man total krasser Text. Jajajajajajaj. Lolololol<br>TEXT TEXT TEXT</p>
+                                        <div class="buttons">
+                                            <h3>Button</h3>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="flex home-quick">
-                                <div class="card quick-access">
+                                <div class="card action-card">
                                     <h4>Quick actions</h4>
                                     <div class="line"></div>
                                     <div class="links">
