--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -122,7 +122,7 @@
                                     <i class='bx bx-revision'></i>
                                     <p>Restart app</p>
                                 </li>
-                                <li onclick="connector('sync.exit')" class="danger">
+                                <li onclick="connector('async.sync.exit')" class="danger">
                                     <i class='bx bx-exit'></i>
                                     <p>Close app</p>
                                 </li>
