Add experimental update channel

--- a/app/app-main/src/main/html/de/settings.html
+++ b/app/app-main/src/main/html/de/settings.html
@@ -158,7 +158,8 @@
                                             <span class="select">
                                                 <label>
                                                     <select id="updater-settings-update-channel" onchange="syncUpdates();">
-                                                        <option value="stable">Stabil (aktiv, empfohlen)</option>
+                                                        <option value="experimental">Experimental (aktiv, instabil)</option>
+                                                        <option value="stable">Stabil (empfohlen)</option>
                                                         <option value="old">Alt (veraltet, nicht empfohlen)</option>
                                                     </select>
                                                 </label>
