--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -160,7 +160,8 @@
                                             <span class="select">
                                                 <label>
                                                     <select id="updater-settings-update-channel" onchange="syncUpdates();">
-                                                        <option value="stable">Stable (active, recommended)</option>
+                                                        <option value="experimental">Experimental (active, unstable)</option>
+                                                        <option value="stable">Stable (recommended)</option>
                                                         <option value="old">Old (deprecated, not recommended)</option>
                                                     </select>
                                                 </label>
