--- a/app/app-main/src/main/html/de/library.html
+++ b/app/app-main/src/main/html/de/library.html
@@ -22,6 +22,9 @@
         <script>init();</script>
     </head>
     <body>
+        <div id="background">
+
+        </div>
         <div class="flex full">
             <div class="flex">
                 <div class="side-menu" id="menu">
@@ -107,6 +110,15 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <!--div class="library-group" id="debug-controls">
+                                    <h3>_______________________</h3>
+                                    <ul>
+                                        <li id="debug-controls-reload" onclick="window.location.reload();">
+                                            <i class='bx bx-refresh'></i>
+                                            <p>Refresh</p>
+                                        </li>
+                                    </ul>
+                                </div-->
                             </div>
                         </div>
                         <div class="library-content">
