--- a/app/app-main/src/main/html/de/settings.html
+++ b/app/app-main/src/main/html/de/settings.html
@@ -18,6 +18,9 @@
         <script>init(); connector("sync.settings.init");</script>
     </head>
     <body>
+        <div id="background">
+
+        </div>
         <div class="flex full">
             <div class="flex">
                 <div class="side-menu" id="menu">
@@ -202,8 +205,8 @@
                                             </label>
                                         </span>
                                     </h3>
-                                    <h3 id="linux-settings-custom-frame">
-                                        Spezialfenster für Linux verwenden
+                                    <!--h3 id="linux-settings-custom-frame">
+                                        Gestaltetes Fenster aktivieren
                                         <span class="checkbox">
                                             <label>
                                                 <input type="checkbox" id="linux-settings-enable-custom-frame" onclick="toggleLinuxFrame();">
@@ -214,7 +217,7 @@
                                                 </script>
                                             </label>
                                         </span>
-                                    </h3>
+                                    </h3-->
                                 </div>
                                 <div class="group template" id="general-group-template">
                                     <h4>Gruppentitel Vorlage</h4>
