--- a/app/app-main/src/main/html/en/library.html
+++ b/app/app-main/src/main/html/en/library.html
@@ -22,6 +22,9 @@
         <script>init();</script>
     </head>
     <body>
+        <div id="background">
+
+        </div>
         <div class="flex full">
             <div class="flex">
                 <div class="side-menu" id="menu">
