--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -19,6 +19,9 @@
         <script>init(); connector("sync.settings.init");</script>
     </head>
     <body>
+    <div id="background">
+
+    </div>
         <div class="flex full">
             <div class="flex">
                 <div class="side-menu" id="menu">
@@ -204,8 +207,8 @@
                                             </label>
                                         </span>
                                     </h3>
-                                    <h3 id="linux-settings-custom-frame">
-                                        Use custom frame for Linux
+                                    <!--h3 id="linux-settings-custom-frame">
+                                        Enable styled window
                                         <span class="checkbox">
                                             <label>
                                                 <input type="checkbox" id="linux-settings-enable-custom-frame" onclick="toggleLinuxFrame();">
@@ -216,7 +219,7 @@
                                                 </script>
                                             </label>
                                         </span>
-                                    </h3>
+                                    </h3-->
                                 </div>
                                 <div class="group template" id="general-group-template">
                                     <h4>New settings group</h4>
