Re-add minecraft dependency and optimize frame behavior

--- a/app/app-main/src/main/html/de/settings.html
+++ b/app/app-main/src/main/html/de/settings.html
@@ -205,7 +205,7 @@
                                             </label>
                                         </span>
                                     </h3>
-                                    <!--h3 id="linux-settings-custom-frame">
+                                    <h3 id="linux-settings-custom-frame">
                                         Gestaltetes Fenster aktivieren
                                         <span class="checkbox">
                                             <label>
@@ -217,7 +217,7 @@
                                                 </script>
                                             </label>
                                         </span>
-                                    </h3-->
+                                    </h3>
                                 </div>
                                 <div class="group template" id="general-group-template">
                                     <h4>Gruppentitel Vorlage</h4>
