--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -207,7 +207,7 @@
                                             </label>
                                         </span>
                                     </h3>
-                                    <!--h3 id="linux-settings-custom-frame">
+                                    <h3 id="linux-settings-custom-frame">
                                         Enable styled window
                                         <span class="checkbox">
                                             <label>
@@ -219,7 +219,7 @@
                                                 </script>
                                             </label>
                                         </span>
-                                    </h3-->
+                                    </h3>
                                 </div>
                                 <div class="group template" id="general-group-template">
                                     <h4>New settings group</h4>
