--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -189,6 +189,14 @@
                                         </span>
                                     </h3>
                                     <h3>
+                                        Accent color
+                                        <span class="color">
+                                            <label>
+                                                <input id="appearance-settings-colors-accent" type="color" onchange="setAccentColor(this.value);">
+                                            </label>
+                                        </span>
+                                    </h3>
+                                    <h3>
                                         Language
                                         <span class="select">
                                             <label>
@@ -199,14 +207,14 @@
                                             </label>
                                         </span>
                                     </h3>
-                                    <h3>
+                                    <!--h3>
                                         UI Scale
                                         <span class="slider">
                                             <label>
                                                 <input step="0.25" type="range" min="-2.5" max="2.5" value="0" onchange="connector('sync.zoomLevel.'+this.value);">
                                             </label>
                                         </span>
-                                    </h3>
+                                    </h3-->
                                     <h3 id="linux-settings-custom-frame">
                                         Enable styled window
                                         <span class="checkbox">
@@ -394,6 +402,7 @@
     </body>
     <script>
         initSettings();
+        document.getElementById("appearance-settings-colors-accent").value = accentColor;
         let start = "discover.html";
         if(localStorage.getItem('settings.startPage')!=null) {
             start = localStorage.getItem('settings.startPage');
