Updater discover css

--- a/app/app-main/src/main/html/en/library.html
+++ b/app/app-main/src/main/html/en/library.html
@@ -82,7 +82,7 @@
                         <div class="library-menu">
                             <label>
                                 <select class="card title-card" id="select-game-module" onchange="onModuleChange();">
-                                    <option id="add-module-option" value="-1">Select a game module...</option>
+                                    <option id="add-module-option" value="-1">Select library...</option>
                                 </select>
                             </label>
                             <div class="card card-disabled menu-card card-scroll">
