Update OLED and light theme

--- a/app/app-main/src/main/html/de/settings.html
+++ b/app/app-main/src/main/html/de/settings.html
@@ -180,7 +180,7 @@
                                                     <option value="automatic">Standard: System</option>
                                                     <option value="../assets/cronos/css/app-colors-dark.css">Standard: Dunkel</option>
                                                     <option value="../assets/cronos/css/app-colors-light.css">Standard: Hell</option>
-                                                    <option value="../assets/application/css/app-colors-oled.css">Standard: OLED (BETA)</option>
+                                                    <option value="../assets/application/css/app-colors-oled.css">Standard: OLED</option>
                                                     <option value="../assets/application/css/app-colors-zyneon.css">Standard: Zyneon</option>
                                                 </select><script>document.getElementById("appearance-settings-theme").value = colors;</script>
                                             </label>
@@ -199,7 +199,7 @@
                                         <span class="select">
                                             <label>
                                                 <select id="appearance-settings-language" onchange="syncLanguage();">
-                                                    <option value="de">Deutsch (German, 80%)</option>
+                                                    <option value="de">Deutsch (German)</option>
                                                     <option value="en">Englisch (English)</option>
                                                 </select>
                                             </label>
