--- a/app/app-main/src/main/html/en/settings.html
+++ b/app/app-main/src/main/html/en/settings.html
@@ -182,7 +182,7 @@
                                                     <option value="automatic">Default: System</option>
                                                     <option value="../assets/cronos/css/app-colors-dark.css">Default: Dark</option>
                                                     <option value="../assets/cronos/css/app-colors-light.css">Default: Light</option>
-                                                    <option value="../assets/application/css/app-colors-oled.css">Default: OLED (BETA)</option>
+                                                    <option value="../assets/application/css/app-colors-oled.css">Default: OLED</option>
                                                     <option value="../assets/application/css/app-colors-zyneon.css">Default: Zyneon</option>
                                                 </select><script>document.getElementById("appearance-settings-theme").value = colors;</script>
                                             </label>
@@ -202,7 +202,7 @@
                                             <label>
                                                 <select id="appearance-settings-language" onchange="syncLanguage();">
                                                     <option value="en">English (English)</option>
-                                                    <option value="de">German (Deutsch, 80%)</option>
+                                                    <option value="de">German (Deutsch)</option>
                                                 </select>
                                             </label>
                                         </span>
