Implement ui with basic functions

--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="card-body p-0">
-                        <p class="p-3" style="white-space: nowrap">Version 2.4.0 (beta, experimental)</p>
+                        <p class="p-3" style="white-space: nowrap">3.0.0-alpha.2</p>
                     </div>
                 </div>
             </div>
