Make active panel hovering, add panel activation modes

--- a/src/main/html/discover.html
+++ b/src/main/html/discover.html
@@ -30,22 +30,24 @@
                         <span>Downloads</span>
                     </li>
                 </ul>
-                <div class="panel card bg-dark-subtle">
-                    <div class="card-header">
-                        <span><strong>NEXUS</strong> App</span>
-                        <div class="buttons">
-                            <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
-                            <i class="bi bi-bell" data-bs-toggle="offcanvas" data-bs-target="#notifications" onclick="openNotifications();"></i>
-                            <i class="bi bi-gear-wide" onclick="location.href = 'settings.html';"></i>
-                        </div>
+            </div>
+            <div class="menu-panel shadow card bg-dark-subtle">
+                <div class="card-header">
+                    <span><strong>NEXUS</strong> App</span>
+                    <div class="panel-toggle" onclick="togglePanel();"></div>
+                    <div class="buttons">
+                        <i class="mode bi" onclick="changePanelMode();"></i>
+                        <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
+                        <i class="bi bi-bell" data-bs-toggle="offcanvas" data-bs-target="#notifications" onclick="openNotifications();"></i>
+                        <i class="bi bi-gear-wide" onclick="location.href = 'settings.html';"></i>
                     </div>
-                    <div class="card-body p-0">
-                        <div class="panel-buttons">
-                            <i class="bi bi-discord" onclick="window.open('https://discord.gg/Awwh6JrJBS','_blank');"></i>
-                            <i class="bi bi-globe2" onclick="window.open('https://nexus.zyneonstudios.org','_blank');"></i>
-                            <i class="bi bi-github" onclick="window.open('https://github.com/zyneonstudios/nexus-app','_blank');"></i>
-                            <i class="bi bi-door-open" onclick="location.href = 'index.html';"></i>
-                        </div>
+                </div>
+                <div class="card-body p-0">
+                    <div class="panel-buttons">
+                        <i class="bi bi-discord" onclick="window.open('https://discord.gg/Awwh6JrJBS','_blank');"></i>
+                        <i class="bi bi-globe2" onclick="window.open('https://nexus.zyneonstudios.org','_blank');"></i>
+                        <i class="bi bi-github" onclick="window.open('https://github.com/zyneonstudios/nexus-app','_blank');"></i>
+                        <i class="bi bi-door-open" onclick="location.href = 'index.html';"></i>
                     </div>
                 </div>
             </div>
