--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -30,18 +30,20 @@
                         <span>Downloads</span>
                     </li>
                 </ul>
-                <div class="panel card bg-dark-subtle">
-                    <div class="card-header">
-                        <span><strong>NEXUS</strong> App</span>
-                        <div class="buttons">
-                            <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
-                            <i class="bi bi-bell" data-bs-toggle="offcanvas" data-bs-target="#notifications" onclick="openNotifications();"></i>
-                            <i class="bi bi-gear-wide active" onclick="location.href = 'index.html';"></i>
-                        </div>
+            </div>
+            <div class="menu-panel shadow card bg-dark-subtle">
+                <div class="card-header">
+                    <span><strong>NEXUS</strong> App</span>
+                    <div class="panel-toggle" onclick="togglePanel();"></div>
+                    <div class="buttons">
+                        <i class="mode bi" onclick="changePanelMode();"></i>
+                        <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
+                        <i class="bi bi-bell" data-bs-toggle="offcanvas" data-bs-target="#notifications" onclick="openNotifications();"></i>
+                        <i class="bi bi-gear-wide active" onclick="location.href = 'index.html';"></i>
                     </div>
-                    <div class="card-body p-0">
-                        <p class="p-3" style="white-space: nowrap">3.0.0-alpha.2</p>
-                    </div>
+                </div>
+                <div class="card-body p-0">
+                    <p class="p-3" style="white-space: nowrap">3.0.0-alpha.2</p>
                 </div>
             </div>
             <div id="content">
@@ -60,7 +62,7 @@
                             <button type="button" class="btn btn-nex-secondary"><i class="bi bi-grid-1x2-fill"></i>Rerun app setup</button>
                             <button type="button" class="btn btn-nex-secondary"><i class="bi bi-arrow-clockwise"></i>Reload app</button>
                             <button type="button" class="btn btn-nex-secondary"><i class="bi bi-recycle"></i>Restart app</button>
-                            <button type="button" class="btn btn-nex-secondary" onclick="location.href = 'index.html'"><i class="bi bi-door-open"></i>Old Interface</button>
+                            <button type="button" class="btn btn-nex-secondary" onclick="location.href = 'index.html'"><i class="bi bi-door-open"></i>Quit app</button>
                         </div>
                     </div>
                     <div class="d-flex w-100 flex-column gap-3">
